Add CAF cell type annotations to CAF Types tab
List specific cell types for each CAF class:
- myCAF: S23_myCAF_ACTA2
- iCAF: S22_iCAF_IL6
- apCAF: S24_apCAF_CD74
- Other: 12 fibroblast subtypes (S01-S12)

Added note explaining classification is based on scAtlas annotations.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -2086,10 +2086,28 @@
                 </div>
 
                 <div class="card" style="margin-bottom: 1rem; padding: 1rem;">
-                    <strong>Cancer-Associated Fibroblast (CAF) Subtypes:</strong><br>
-                    <span style="color: #1f77b4;">● myCAF</span> (myofibroblastic) - ECM remodeling, smooth muscle markers<br>
-                    <span style="color: #ff7f0e;">● iCAF</span> (inflammatory) - Cytokine secretion, immune modulation<br>
-                    <span style="color: #2ca02c;">● apCAF</span> (antigen-presenting) - MHC-II expression, immune interaction
+                    <strong>Cancer-Associated Fibroblast (CAF) Subtypes:</strong>
+                    <div style="margin-top: 0.5rem;">
+                        <div style="margin-bottom: 0.5rem;">
+                            <span style="color: #1f77b4; font-weight: bold;">● myCAF</span> (myofibroblastic) - ECM remodeling, contractile markers (ACTA2, COL1A1)<br>
+                            <small style="color: #666; margin-left: 1rem;">Cell types: S23_myCAF_ACTA2</small>
+                        </div>
+                        <div style="margin-bottom: 0.5rem;">
+                            <span style="color: #ff7f0e; font-weight: bold;">● iCAF</span> (inflammatory) - Cytokine secretion, immune modulation (IL6, CXCL12)<br>
+                            <small style="color: #666; margin-left: 1rem;">Cell types: S22_iCAF_IL6</small>
+                        </div>
+                        <div style="margin-bottom: 0.5rem;">
+                            <span style="color: #2ca02c; font-weight: bold;">● apCAF</span> (antigen-presenting) - MHC-II expression (HLA-DR, CD74)<br>
+                            <small style="color: #666; margin-left: 1rem;">Cell types: S24_apCAF_CD74</small>
+                        </div>
+                        <div>
+                            <span style="color: #999; font-weight: bold;">● Other Fibroblasts</span> (12 subtypes) - General fibroblast populations<br>
+                            <small style="color: #666; margin-left: 1rem;">Cell types: S01_Fb_PI16, S02_Fb_C7, S03_Fb_LAMC1, S04_Fb_CD9, S05_Fb_DPEP1, S06_Fb_ARID5B, S07_Fb_TCF21, S08_Fb_PTGES, S09_Fb_CEBPB, S10_Fb_MXRA5, S11_Fb_IGFBP2, S12_Fb_MMP11</small>
+                        </div>
+                    </div>
+                    <div style="margin-top: 0.75rem; padding-top: 0.5rem; border-top: 1px solid #eee; font-size: 0.85rem; color: #666;">
+                        <strong>Note:</strong> CAF subtypes are classified based on scAtlas cell type annotations (S22-S24 prefixes). Other fibroblasts (S01-S12) represent diverse stromal populations not classified into canonical CAF subtypes.
+                    </div>
                 </div>
 
                 <div class="two-col">
